--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_gravity="fill"
+    android:columnCount="2"
+    android:rowCount="2">
 
-    <GridLayout
-        android:id="@+id/main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill"
-        android:columnCount="2"
-        android:rowCount="2">
-
-        <ImageView
-            android:id="@+id/imageView"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -23,9 +18,28 @@
             android:layout_column="0"
             android:layout_columnSpan="1"
             android:layout_columnWeight="1"
-            android:contentDescription="@string/illustration_of_parameters"
-            android:gravity="center_vertical|end"
-            android:src="@drawable/filament_vector" />
+            android:orientation="vertical">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                android:id="@+id/dots_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="8dp"
+                app:dotsColor="?attr/colorOnSurface"
+                app:dotsSize="8dp"
+                app:dotsSpacing="4dp"
+                app:progressMode="true"
+                app:selectedDotColor="?attr/colorPrimary" />
+
+
+        </LinearLayout>
 
         <include
             android:id="@+id/calc_layout"
@@ -58,6 +72,8 @@
                 android:layout_weight="1"
                 android:layout_margin="4dp"
                 android:text="@string/button_minus_ten"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 style="?android:attr/buttonBarButtonStyle" />
 
             <Button
@@ -66,6 +82,8 @@
                 android:layout_weight="1"
                 android:layout_margin="4dp"
                 android:text="@string/button_minus_one"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 style="?android:attr/buttonBarButtonStyle" />
 
             <Button
@@ -74,6 +92,8 @@
                 android:layout_weight="1"
                 android:layout_margin="4dp"
                 android:text="@string/button_plus_one"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 style="?android:attr/buttonBarButtonStyle" />
 
             <Button
@@ -82,10 +102,10 @@
                 android:layout_weight="1"
                 android:layout_margin="4dp"
                 android:text="@string/button_plus_ten"
+                android:textSize="24sp"
+                android:textStyle="bold"
                 style="?android:attr/buttonBarButtonStyle" />
 
         </LinearLayout>
 
     </GridLayout>
-
-</ScrollView>
